etc/defm.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: defm
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: defm
subjects:
  - kind: ServiceAccount
    namespace: defm
    name: default
roleRef:
  kind: ClusterRole
  name: cluster-admin
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: v1
kind: Pod
metadata:
  namespace: defm
  name: defn
spec:
  containers:
    - name: defn
      image: defn/defm
      tty: true
      volumeMounts:
        - name: docker-sock
          mountPath: /var/run/docker.sock
        - name: password-store
          mountPath: /home/ubuntu/.password-store
        - name: work
          mountPath: /workspaces
  volumes:
    - name: docker-sock
      hostPath:
        path: /var/run/docker.sock
    - name: password-store
      hostPath:
        path: /mnt/password-store
    - name: work
      hostPath:
        path: /mnt/work
