etc/defn.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: defn
---
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: defn
subjects:
  - kind: ServiceAccount
    namespace: defn
    name: default
roleRef:
  kind: ClusterRole
  name: cluster-admin
  apiGroup: rbac.authorization.k8s.io
---
apiVersion: v1
kind: Pod
metadata:
  namespace: defn
  name: defn
spec:
  containers:
    - name: defn
      image: defn/dev
      tty: true
      volumeMounts:
        - mountPath: /var/run/docker.sock
          name: docker-sock

  volumes:
    - name: docker-sock
      hostPath:
        path: /var/run/docker.sock
