etc/iptables.txt
* nat
-N MESH_REDIRECT
-N MESH_IN_REDIRECT
-N MESH_OUTPUT
-A MESH_REDIRECT -p tcp -j REDIRECT --to-ports 15001
-A MESH_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A OUTPUT -p tcp -j MESH_OUTPUT
-A MESH_OUTPUT -p tcp --dport 5681 -j RETURN
-A MESH_OUTPUT -p tcp --dport 5685 -j RETURN
-A MESH_OUTPUT -p tcp --dport 5678 -j RETURN
-A MESH_OUTPUT -o lo -s 127.0.0.6/32 -j RETURN
-A MESH_OUTPUT -o lo ! -d 127.0.0.1/32 -m owner --uid-owner 1001 -j MESH_IN_REDIRECT
-A MESH_OUTPUT -o lo -m owner ! --uid-owner 1001 -j RETURN
-A MESH_OUTPUT -m owner --uid-owner 1001 -j RETURN
-A MESH_OUTPUT -o lo ! -d 127.0.0.1/32 -m owner --gid-owner 1001 -j MESH_IN_REDIRECT
-A MESH_OUTPUT -o lo -m owner ! --gid-owner 1001 -j RETURN
-A MESH_OUTPUT -m owner --gid-owner 1001 -j RETURN
-A MESH_OUTPUT -d 127.0.0.1/32 -j RETURN
-A MESH_OUTPUT -j MESH_REDIRECT

COMMIT
